# taller-infra

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  README.md  TODO.md  Taskfile.yml  compose.yml
backend/: .dockerignore  .env.example  .python-version  AGENTS.md  Dockerfile  Taskfile.yml  compose.yml  pyproject.toml
backend/src/mentyx/: database.py  main.py  models.py  schemas.py
backend/src/mentyx/routers/: question.py  votes.py
backend/tests/: conftest.py  test_question_api.py  test_votes_api.py
frontend/: .dockerignore  AGENTS.md  Dockerfile  Taskfile.yml  compose.yml  index.html  nginx.conf.template  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Results.tsx  Setup.tsx  Voter.tsx  Wait.tsx
infra/: .gitignore  .terraform.lock.hcl  Taskfile.yml  artifact_registry.tf  cloud_run.tf  cloud_sql.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
