[project]
name = "mentyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laski", email = "laski@eryx.co" }
]
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[tool.ruff]
# Configure Ruff settings
target-version = "py314"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.6",
]
